--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -25,9 +25,9 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             android:layout_weight="3"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="sans-serif-condensed-medium"
             android:padding="8dp"
-            android:textColor="@color/gray"
+            android:textColor="@color/black"
             tools:text="MAHARASTRA" />
 
         <TextView
@@ -42,7 +42,7 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/red"
+            android:textColor="@color/black"
             tools:text="735" />
 
         <TextView
@@ -57,7 +57,7 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/red"
+            android:textColor="@color/black"
             tools:text="735" />
 
         <TextView
@@ -72,7 +72,7 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/red"
+            android:textColor="@color/black"
             tools:text="735" />
 
     </LinearLayout>
