--- a/app/src/main/res/layout/item_my_country.xml
+++ b/app/src/main/res/layout/item_my_country.xml
@@ -25,9 +25,10 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             android:layout_weight="3"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="sans-serif-black"
             android:padding="8dp"
-            android:textColor="@color/gray"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:text="MAHARASTRA" />
 
         <TextView
@@ -39,10 +40,11 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
             android:layout_weight="3"
-            android:fontFamily="sans-serif-condensed-medium"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:padding="8dp"
             android:textColor="@color/red"
+            android:textStyle="bold"
             tools:text="735" />
 
         <TextView
@@ -54,10 +56,11 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
             android:layout_weight="3"
-            android:fontFamily="sans-serif-condensed-medium"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:padding="8dp"
             android:textColor="@color/red"
+            android:textStyle="bold"
             tools:text="735" />
 
         <TextView
@@ -69,10 +72,11 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
             android:layout_weight="3"
-            android:fontFamily="sans-serif-condensed-medium"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:padding="8dp"
             android:textColor="@color/red"
+            android:textStyle="bold"
             tools:text="735" />
 
     </LinearLayout>
