--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_state"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,7 +13,7 @@
         android:orientation="horizontal"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:weightSum="12">
+        android:weightSum="4">
 
         <TextView
             android:id="@+id/country"
@@ -24,11 +23,11 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:fontFamily="sans-serif-condensed-medium"
             android:padding="8dp"
-            android:textColor="@color/black"
-            tools:text="MAHARASTRA" />
+            android:text="@string/country"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/total"
@@ -38,12 +37,14 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:drawableEnd="@drawable/ic_up"
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/black"
-            tools:text="735" />
+            android:text="@string/label_confirmed"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/deaths"
@@ -53,12 +54,14 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:drawableEnd="@drawable/ic_up"
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/black"
-            tools:text="735" />
+            android:text="@string/label_recovered"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/recovered"
@@ -68,12 +71,14 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:drawableEnd="@drawable/ic_up"
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/black"
-            tools:text="735" />
+            android:text="@string/label_deceased"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
